--- a/lori/styles.css
+++ b/lori/styles.css
@@ -1,58 +1,72 @@
 body {
-    background-image: url(./thechosen.JPG);
-    background-position: right top;
-    background-repeat: no-repeat;
     margin: 0;
+    padding: 0;
 }
-
-.galleryWrap {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 1000px;
-    align-items: center;
-    padding-left: 130px;
-
-
-}
-
-.galleryWrap img {
-    width: 350px;
-    height: 175px;
-    object-fit: contain;
-}
-
-.galleryCard {
-
-    margin: 10px;
-}
-
-
 
 .pageWrap {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
 
+.topNavBox {
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(26, 127, 216)
 }
 
 #topNav {
     display: flex;
+    float: center;
     justify-content: space-between;
     list-style: none;
     position: fixed;
     margin: 0;
-    z-index: 2000;
-
-
-    width: 93%;
-    background: white;
-    padding: 20px;
-
+    width: 100%;
+    padding-bottom: 0px;
     text-align: center;
+    background-color: white;
+    height: 200px;
 }
 
-.box {}
+#topNav a {
+    display: block;
+    padding-top: 20px;
+    padding-right: 150px;
+    padding-left: 150px;
+    text-decoration: none;
+    background-color: white;
+    color: gray;
+    padding: 1em;
+}
+
+#topNav a:hover {
+    cursor: pointer;
+    color: cornflowerblue;
+}
+
+#topNav img {
+    padding: 0;
+    height: 200px;
+    width: 300px;
+}
+
+.film {
+    font-size: 30px;
+    padding-top: 60px;
+    padding-left: 40px;
+}
+
+.resume {
+    font-size: 30px;
+    padding-top: 60px;
+    padding-right: 40px;
+}
+
+.logo {
+    height: 150px;
+    width: 150px;
+}
 
 .horse {
     height: 300px;
@@ -60,27 +74,52 @@ body {
     object-fit: cover;
 }
 
-.gallery img {
-    height: 75%;
-    max-width: 300px
+.galleryWrap {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    border: none;
+}
+
+.galleryWrap img {
+    width: 450px;
+    height: 450px;
+    object-fit: cover;
+}
+
+.galleryCard {
+    border: 2px solid black;
+    margin: 10px;
+    text-align: center;
 }
 
 .navWrap {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
+    list-style: none;
+    width: 900px;
+    text-align: center;
 }
 
+.navWrap a {
+    text-decoration: none;
+    background-color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.navWrap a:hover {
+    cursor: pointer;
+}
 
 .section1 {
     display: flex;
     flex-direction: row;
     justify-content: center;
-
 }
 
 .section1 img {
-    width: 700px;
+    width: 100%;
     height: 100%;
+    padding-top: 80px;
 }
